feat: adds logout resource
